updated all folders
Updated all Empty Pages.???
and added and index.php to each folder

--- a/public_html/css_code/0000_Empty_CSS_Page.css
+++ b/public_html/css_code/0000_Empty_CSS_Page.css
@@ -16,12 +16,15 @@
 * Embed_YouTube: 
 * Website_For_Video: 
 */
+
 /*
 Add your license here. Here is a good list of licenses, that you can use:
 https://www.gnu.org/licenses/license-list.html
 */
 
-// Start Your Script Here
+/* Start Your Script Here */
 
 
-// EOF
+
+
+/* EOF */
